grammar.js
    call_expression: $ => choice(
      prec('call', seq(
        field('function', choice($.expression, $.import)),
        field('type_arguments', optional($.type_arguments)),
        field('arguments', $.arguments),
      )),
      prec('template_call', seq(
        field('function', choice($.primary_expression, $.new_expression)),
        field('arguments', $.template_string),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        '?.',
        field('type_arguments', optional($.type_arguments)),
        field('arguments', $.arguments),
      )),
    ),

    export_statement: ($, previous) => choice(
      previous,
      seq(
        'export',
        'type',
        $.export_clause,
        optional($._from_clause),
        $._semicolon,
      ),
      seq('export', '=', $.expression, $._semicolon),
      seq('export', 'as', 'namespace', $.identifier, $._semicolon),
    ),

    interface_declaration: $ => seq(
      'interface',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('body', $.interface_body),
    ),

    interface_body: $ => seq(
      '{',
      repeat(choice(
        $.interface_field,
        $.interface_method_signature,
        ',',
        ';',
      )),
      '}',
    ),

    interface_field: $ => seq(
      optional('mut'),
      field('name', choice(
        alias($._reserved_identifier, $.property_identifier),
        alias($.identifier, $.property_identifier),
      )),
      optional('?'),
      ':',
      field('type', $.type),
    ),

    // `fn name(params) ReturnType` — no colon before the return type, no
    // required separator (a newline ends the signature, as in the deka
    // stdlib packages).
    interface_method_signature: $ => seq(
      optional('mut'),
      'fn',
      field('name', choice(
        alias($._reserved_identifier, $.property_identifier),
        alias($.identifier, $.property_identifier),
      )),
      field('parameters', $.formal_parameters),
      field('return_type', optional($.type)),
      choice($._semicolon, $._function_signature_automatic_semicolon),
    ),

    // DEKA-SPECIFIC: DekaScript enums carry payloads (`Case(Type)`) and may
    // be marked `super` (runtime type information, deka#561). Cases are
    // separated by commas, semicolons, or newlines.
    enum_declaration: $ => prec('declaration', seq(
      optional('super'),
      'enum',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      '{',
      repeat(choice(
        $.enum_case,
        ',',
        ';',
      )),
      '}',
      optional($._automatic_semicolon),
    )),

    enum_case: $ => seq(
      field('name', choice(
        alias($._reserved_identifier, $.identifier),
        $.identifier,
      )),
      optional(seq(
        '(',
        field('payload', $.type),
        ')',
      )),
    ),

    // DEKA-SPECIFIC: `alias X<T> = Y` (preferred) and deprecated
    // `type X = Y`, plus the newtype form `type Name Repr`.
    type_alias_declaration: $ => prec('declaration', choice(
      seq(
        choice('alias', 'type'),
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        '=',
        field('value', $.type),
        $._semicolon,
      ),
      seq(
        'type',
        field('name', $._type_identifier),
        field('representation', $._type_identifier),
        $._semicolon,
      ),
    )),

    required_parameter: $ => seq(
      $._parameter_name,
      field('type', optional($.type_annotation)),
      optional($._initializer),
    ),

    _parameter_name: $ => seq(
      repeat(field('decorator', $.decorator)),
      optional($.accessibility_modifier),
      optional($.override_modifier),
      optional('readonly'),
      field('pattern', choice($.pattern, $.this)),
    ),

    type_annotation: $ => seq(
      ':',
      $.type,
    ),

    // DEKA-SPECIFIC: DekaScript types are named/generic types, `fn`
    // function types, parenthesized types, unions (`A | B`), and postfix
    // option types (`T?`). TypeScript-only type forms (object/mapped/
    // conditional/tuple/lookup/typeof types, intersections, literal types)
    // were dropped: none of them are producible by dsc's type parser
    // (crates/deka_syntax/src/parse/ty.rs), and dropping them removes the
    // `{`-ambiguity between fn bodies and object types.
    deka_function_type: $ => prec.left(seq(
      'fn',
      field('parameters', $.formal_parameters),
      field('return_type', $.type),
    )),

    predefined_type: _ => choice(
      'any',
      'number',
      'boolean',
      'string',
      'symbol',
      'void',
      'unknown',
      'never',
      'object',
    ),

    generic_type: $ => prec('call', seq(
      field('name', choice(
        $._type_identifier,
        $.nested_type_identifier,
      )),
      field('type_arguments', $.type_arguments),
    )),

    type_arguments: $ => seq(
      '<',
      commaSep1($.type),
      optional(','),
      '>',
    ),

    type_parameters: $ => seq(
      '<', commaSep1($.type_parameter), optional(','), '>',
    ),

    type_parameter: $ => seq(
      field('name', $._type_identifier),
      field('constraint', optional($.constraint)),
    ),

    constraint: $ => seq(
      ':',
      $.type,
    ),

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _type_identifier: $ => alias($.identifier, $.type_identifier),

    _reserved_identifier: (_, previous) => choice(
      'declare',
      'namespace',
      'type',
      'public',
      'private',
      'protected',
      'override',
      'readonly',
      'module',
      'any',
      'number',
      'boolean',
      'string',
      'symbol',
      'export',
      'object',
      'new',
      'readonly',
      previous,
    ),

    // === DEKA-SPECIFIC rules (no upstream equivalent) ===

    // `fn name<T: Bound>(params) ReturnType { ... }` — top level and after
    // `export` only in DekaScript; the return type, when present, is a type
    // with NO leading colon (dsc rejects `fn f(): T` declarations).
    fn_declaration: $ => prec.right('declaration', seq(
      optional('async'),
      'fn',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.formal_parameters),
      field('return_type', optional($.type)),
      field('body', $.statement_block),
      optional($._automatic_semicolon),
    )),

    // Receiver method: `fn (s Signal<T>) get() T { ... }` (rfd#56).
    receiver_method_declaration: $ => prec.right('declaration', seq(
      optional('async'),
      'fn',
      '(',
      field('receiver_name', $.identifier),
      optional('mut'),
      field('receiver_type', $._type_identifier),
      field('receiver_type_arguments', optional($.type_parameters)),
      ')',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.formal_parameters),
      field('return_type', optional($.type)),
      field('body', $.statement_block),
      optional($._automatic_semicolon),
    )),

    // Anonymous function expression: `fn (x: number) number { ... }`. The
    // return type is optional; a colon before it is tolerated (dsc accepts
    // both spellings here).
    struct_declaration: $ => prec('declaration', seq(
      optional('super'),
      'struct',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      '{',
      repeat(choice(
        $.struct_field,
        $.struct_embed,
        ',',
        ';',
      )),
      '}',
      optional($._automatic_semicolon),
    )),

    struct_field: $ => seq(
      field('name', choice(
        alias($._reserved_identifier, $.property_identifier),
        alias($.identifier, $.property_identifier),
      )),
      optional('?'),
      ':',
      field('type', $.type),
      optional(seq(
        '=',
        field('default', $.expression),
      )),
    ),

    // Embedded struct: `struct Outer { Inner }` — a bare type name.
    struct_embed: $ => field('name', $._type_identifier),

    // `match scrutinee { Pattern => expr, ... }`. Arms are separated by
    // commas, semicolons, or newlines; `|` separates or-patterns.
    none: _ => 'None',

    // `unwrap` is a contextual keyword: it opens unwrap_expression after
    // `=`, but must keep working as an ordinary identifier everywhere else
    // (dsc keeps `unwrap` out of the keyword list for this reason). Same
    // trick tree-sitter-javascript uses for `get`/`set`.
    binary_expression: $ => choice(
      ...[
        ['||', 'logical_or'],
        ['&&', 'logical_and'],
        ['|>', 'logical_and'],
        ['==', 'binary_equality'],
        ['===', 'binary_equality'],
        ['!=', 'binary_equality'],
        ['!==', 'binary_equality'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['**', 'binary_exp', 'right'],
      ].map(([operator, precedence, associativity]) =>
        (associativity === 'right' ? prec.right : prec.left)(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        )),
      ),
    ),

    // DEKA-SPECIFIC: DekaScript unary operators are `!`, `-`, `+` only;
    // `typeof`, `void`, and `delete` are ordinary identifiers.
